   allows the user to change the required number of packets in sequence to any
   desired value. Use a value of 1 to essentially restore the old behavior.
   Also, with strictrtp on, Asterisk will now drop all packets until learning
   mode has successfully exited. These changes are based on how pjmedia handles
   media sources and source changes.

------------------------------------------------------------------------------
--- Functionality changes since Asterisk 1.8.7.1 -----------------------------
------------------------------------------------------------------------------

SIP Changes
-----------
    * Due to potential username discovery vulnerabilities, the 'nat' setting in sip.conf
      now defaults to force_rport. It is very important that phones requiring nat=no be
      specifically set as such instead of relying on the default setting. If at all
      possible, all devices should have nat settings configured in the general section as
      opposed to configuring nat per-device.

------------------------------------------------------------------------------
--- Functionality changes from Asterisk 1.6.2 to Asterisk 1.8 ----------------
------------------------------------------------------------------------------

SIP Changes
-----------
 * Added preferred_codec_only option in sip.conf. This feature limits the joint
   codecs sent in response to an INVITE to the single most preferred codec.
 * Added SIP_CODEC_OUTBOUND dialplan variable which can be used to set the codec
   to be used for the outgoing call. It must be one of the codecs configured
   for the device.
 * Added tlsprivatekey option to sip.conf.  This allows a separate .pem file
   to be used for holding a private key.  If tlsprivatekey is not specified,
   tlscertfile is searched for both public and private key.
 * Added tlsclientmethod option to sip.conf.  This allows the protocol for
   outbound client connections to be specified.